<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="110dip"
              android:gravity="center_horizontal|center_vertical"
              android:orientation="horizontal"
              android:background="@color/bg_activity"
              android:paddingBottom="@dimen/margin_space"
              android:paddingTop="@dimen/margin_space">


    <LinearLayout
        android:id="@+id/home_menu_categroy_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:clickable="true"
        android:background="@drawable/view_bg_clickable_selector"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/home_menu_categroy_imgv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/navigation_clean"/>

        <TextView
            android:id="@+id/home_menu_categroy_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_clean_text"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_font_gray"
            android:textSize="@dimen/font_size_normal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_menu_shopcart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:clickable="true"
        android:background="@drawable/view_bg_clickable_selector"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/home_menu_shopcart_imgv"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/navigation_housekeeper"
            />

        <TextView
            android:id="@+id/home_menu_shopcart_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_housekeeper_text"
            android:layout_marginTop="7dp"
            android:textColor="@color/color_font_gray"
            android:textSize="@dimen/font_size_normal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_menu_order_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:clickable="true"
        android:background="@drawable/view_bg_clickable_selector"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/home_menu_order_imgv"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/navigation_appliance"/>

        <TextView
            android:id="@+id/home_menu_order_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_appliance_text"
            android:layout_marginTop="7dp"
            android:textColor="@color/color_font_gray"
            android:textSize="@dimen/font_size_normal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_menu_coupon_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:clickable="true"
        android:background="@drawable/view_bg_clickable_selector"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/home_menu_coupon_imgv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/navigation_move"/>

        <TextView
            android:id="@+id/home_menu_coupon_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_move_text"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_font_gray"
            android:textSize="@dimen/font_size_normal"/>
    </LinearLayout>
</LinearLayout>