<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_activity"
              android:orientation="vertical" >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/person_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- 头像, 用户名称等信息 -->
            <include
                layout="@layout/person_head_slice"
                android:layout_width="match_parent"
                android:layout_height="140dip"/>

            <include layout="@layout/separator_line_margin_slice"/>

            <!-- 我的订单 -->
            <include
                android:id="@+id/person_order_all_container"
                layout="@layout/person_order_all_slice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"/>

            <include layout="@layout/person_order_category_slice"/>

            <View style="@style/separator_line"/>

            <!-- 订单分类 -->
            <include layout="@layout/separator_line_margin_slice"/>

            <!-- 我的收藏 -->
            <com.example.lenovo.housekeepingplatform.view.ArrowRowView
                android:id="@+id/person_collect_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_goods_collect" />
            <include layout="@layout/separator_line_margin_slice"/>

            <!-- 余额, 积分 -->
            <include
                android:id="@+id/person_integrate_rlayout"
                layout="@layout/person_integrate_row_slice"
                android:layout_width="match_parent"
                android:layout_height="60dip"/>
            <View  style="@style/separator_line"/>

            <!-- 收货地址 -->
            <com.example.lenovo.housekeepingplatform.view.ArrowRowView
                android:id="@+id/person_receive_address_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_receive_address"/>

            <View  style="@style/separator_line"/>

            <!-- 优惠券 -->
            <com.example.lenovo.housekeepingplatform.view.ArrowRowView
                android:id="@+id/person_coupon_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_coupon" />
            <View  style="@style/separator_line"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>