<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="80dip"
              android:gravity="center_vertical"
              android:background="@color/bg_view"
    >
    <RelativeLayout
        android:id="@+id/personal_order_waitpay_layout"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:background="@drawable/view_bg_clickable_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/waitpay_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/personal_order_purchased_icon"
            android:layout_above="@+id/wait_pay_txtv"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/buynumber_view"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_toRightOf="@+id/waitpay_img"
            android:layout_above="@+id/wait_pay_txtv"
            android:background="@drawable/bg_mine_buynumber"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/wait_pay_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_order_waitpay"
            style="@style/textStyle.Normal.black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_order_waitreceive_layout"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:background="@drawable/view_bg_clickable_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/waitservice_img"
            android:layout_above="@+id/waitservice_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/personal_order_accepted_icon"/>

        <TextView
            android:id="@+id/servicenumber_view"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_toRightOf="@+id/waitservice_img"
            android:layout_above="@+id/waitservice_txtv"
            android:background="@drawable/bg_mine_buynumber"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/waitservice_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_order_waitreceive"
            style="@style/textStyle.Normal.black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/personal_order_waitcomment_layout"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/view_bg_clickable_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/personal_order_canceled_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_order_waitcomment"
            style="@style/textStyle.Normal.black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_order_returned"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/view_bg_clickable_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/personal_order_returned_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_order_returned"
            style="@style/textStyle.Normal.black"/>
    </LinearLayout>

</LinearLayout>